Add option to pass transcription using the url to json from transcriptions service
